--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -1,31 +1,34 @@
 <label for="file" class="crop-container">
-  <img id="cover" class="crop-cover" [src]="coverURL" style="cursor:pointer">
+  <!-- <img id="cover" class="crop-cover" [src]="coverURL" style="cursor:pointer"> -->
 </label>
 <input type='file' name="file" id="file" class="inputfile" (change)="readUrl($event)" [src]="coverURL">
 <div class="row justify-content-center">
   <div class="col-sm-9 col-md-9 col-lg-9 mt-4">
-    <form>
-      <input class="remove-glow" #titleValdation="ngModel" type="text" placeholder="Article Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="100">
-<!--       <div *ngIf="titleValdation.errors && (titleValdation.dirty || titleValdation.touched)" class="alert alert-danger">
-        <div [hidden]="!titleValdation.errors.required">
-          Article title is required!
+    <div class="card">
+      <div class="card-block">
+        <div class="cover-background" *ngIf="!hasCover">
+          <img src="assets/img/UploadCover.png">
+          <span class="cover-text">Articles look better with cover photos</span>
         </div>
-        <div [hidden]="!titleValdation.errors.minlength">
-          Title must be at least 4 characters long.
-        </div>
-        <div [hidden]="!titleValdation.errors.maxlength">
-          Title cannot be more than 30 characters long.
-        </div>
-      </div> -->
-      <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
+        <form>
+          <input class="remove-glow" autofocus #titleValdation="ngModel" type="text" placeholder="Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="100">
+    <!--       <div *ngIf="titleValdation.errors && (titleValdation.dirty || titleValdation.touched)" class="alert alert-danger">
+            <div [hidden]="!titleValdation.errors.required">
+              Article title is required!
+            </div>
+            <div [hidden]="!titleValdation.errors.minlength">
+              Title must be at least 4 characters long.
+            </div>
+            <div [hidden]="!titleValdation.errors.maxlength">
+              Title cannot be more than 30 characters long.
+            </div>
+          </div> -->
+          <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
+          <br>
+        </form>
+      </div>
+    </div>
 
-      <br>
-<!--       <div class="card" *ngIf="!editorView">
-        <div class="card-block">
-          <div [froalaView]="editorContent"></div>
-        </div>
-      </div> -->
-    </form>
     <button class="btn btn-danger" (click)="submit()">Submit</button>
     <br>
   </div>
