--- a/src/app/nav-bar/laz-navbar.css
+++ b/src/app/nav-bar/laz-navbar.css
@@ -2,6 +2,8 @@
   /*background-color:#422c89;*/
   font-family:Lato-Regular;
   font-size:17px;
+  background-color:rgba(66,44,137,1); 
+  height:70px;
 }
 .gold-bar {
   /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);*/
@@ -40,30 +42,4 @@
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-.story {
-  font-family: Lato-Black;
-  font-size: 23px;
-  color:white; 
-}
-.board {
-  font-family: Lato-Regular;
-  font-size: 23px;
-  color:white; 
-}
-.storyboard {
-  display:block;
-  position:relative;
-  margin:auto;
-  transform: translate(-20%);
-}
-
-.publish-btn {
-  background-color:#F2A900;
-}
-
-.publish-text {
-  font-family: Lato-Regular;
-  font-size:15px;
-  color:white;
 }
