--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -13,12 +13,12 @@
                   <p class="mb-0"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Upload Profile Photo</p>
                 </label> 
               </div>
-              <div class="d-flex flex-column ml-2" style="width:45%">
+<!--               <div class="d-flex flex-column ml-2" style="width:45%">
                 <label for="firstname">Email Address (Username)</label>
                 <input type="email" class="form-control mb-3" id="firstname">
                 <label for="firstname">Password</label>
                 <input type="Password" class="form-control mb-3" id="firstname">
-              </div>
+              </div> -->
             </div>
 
             <div class="d-flex flex-row flex-wrap">
