--- a/src/app/article-composer/article-composer.component.css
+++ b/src/app/article-composer/article-composer.component.css
@@ -22,8 +22,9 @@ input {
   height:0
 }
 
-img {
+.crop-container img {
   max-width: 100%; /* This rule is very important, please do not ignore this! */
+  max-height:350px;
 }
 
 .crop-container {
@@ -59,4 +60,48 @@ img {
   font-family:Lato-Regular;
   font-size:14px;
   color:rgb(67,48,137);;
+}
+
+/*For the navbar*/
+.story {
+  font-family: Lato-Black;
+  font-size: 23px;
+  color:white; 
+}
+.board {
+  font-family: Lato-Regular;
+  font-size: 23px;
+  color:white; 
+}
+.storyboard {
+  display:block;
+  position:relative;
+  margin:auto;
+  transform: translate(-20%);
+}
+
+.publish-btn {
+  background-color:#F2A900;
+  cursor:pointer;
+}
+
+.publish-text {
+  font-family: Lato-Bold;
+  font-size:15px;
+  color:white;
+}
+
+.gold-bar {
+  /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);*/
+  background-color:#F2A900;
+  height:8px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 70px;
+  z-index: 1;
+}
+
+.navbar {
+  background-color:rgba(66,44,137,1); 
+  height:70px;
 }
