--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -8,6 +8,16 @@
       </div>
       <div class="row justify-content-center">
       	<div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
+      		<br>
+      		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="!didUserUpvote()">
+	      		<img src="assets/img/icons/Like.svg" class="heart">
+      			<span>Like this article to give the author your support</span>
+      		</div>
+      		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="didUserUpvote()">
+	      		<img src="assets/img/icons/Filled-Like.svg" class="heart">
+      			<span style="color:red">You like this article. Thanks for giving feedback!</span>
+      		</div>
+      		<br>
 		      <div class="card mt-1" *ngIf="!isCommentActive && authService.userSignedIn$" (click)="toggleCommentActive()" style="cursor:pointer">
 		      	<div class="card-block d-flex flex-row">
 		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
@@ -35,9 +45,9 @@
 		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
 		      		<div class="d-flex flex-column">
 		      			<span class="comment-name-text mt-1">{{comment.author}}</span>
-		      			<span class="comment-name-text mt-1">{{comment.created_at | getPublicationDate}}</span>
+		      			<span class="comment-time mt-1">{{comment.created_at | getPublicationDate}}</span>
 		      		</div>
-		      		<div class="ml-auto p-2 delete-btn" *ngIf="didUserPublish(comment)" (click)="delete(comment)">Delete</div>
+		      		<div class="ml-auto p-2 delete-btn" *ngIf="didUserPublish(comment)" (click)="deleteComment(comment)">Delete</div>
 		      	</div>
 		      	<div class="comment-text m-2">
 		      		{{comment.body}}
