--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -266,4 +266,10 @@ h5 {
   width:100%;
   height:auto;
 }
+
+.delete-btn {
+  cursor:pointer;
+  font-family: Lato-Regular;
+  color:#1677CB;
+}
     
