--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -24,12 +24,16 @@
           <span class="cover-text">Articles look better with cover photos</span>
         </label>
         <div class="crop-container" *ngIf="hasCover">
-          <img id="cover" src="" class="crop-cover">
+          <img id="cover" src="" class="cover-img">
         </div>
         <form>
           <div class="row justify-content-center">
             <div class="col-sm-8 col-md-8 col-lg-8">
+              <div class="alert alert-danger" role="alert" *ngIf="submissionError">
+                <strong>Submission error:</strong> Article needs to have a title and a body
+              </div>
               <input class="remove-glow" autofocus #titleValdation="ngModel" type="text" placeholder="Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="100">
+              <a href="https://goo.gl/f12uUj" target="_blank" class="mt-0"><small>Here is a great resource for stock images</small></a>
               <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
             </div>
           </div>
@@ -37,7 +41,6 @@
         </form>
       </div>
     </div>
-    <button class="btn btn-success" (click)="uploadCoverToS3()">Upload to S3</button>
   </div>
 </div>
 
