--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="background-color:white">
   <div class="row justify-content-center">
     <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8" style="margin-bottom:100px">
-      <img src="assets/img/SampleArticleCover.jpg" class="article-cover">
+      <img src="{{article.cover_url}}" class="article-cover">
       <span class="article-title mt-4">{{article.title}}</span>
       <br><br>
       <div class="article-body" [innerHTML]="article.body">
@@ -9,9 +9,21 @@
       <div class="row justify-content-center">
       	<div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
       		<br>
-      		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="!didUserUpvote()">
+      		<div class="like-box" style="cursor:pointer" routerLink="/login" *ngIf="!authService.userSignedIn$">
 	      		<img src="assets/img/icons/Like.svg" class="heart">
-      			<span>Like this article to give the author your support</span>
+	      		<div class="d-flex flex-column">
+	      			<span *ngIf="article.total_votes != 1">This article has {{article.total_votes}} likes</span>
+	      			<span *ngIf="article.total_votes == 1">This article has 1 like</span>
+	      			<span>Sign in to upvote it too!</span>
+	      		</div>
+      		</div>
+      		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="authService.userSignedIn$ && !didUserUpvote()">
+	      		<img src="assets/img/icons/Like.svg" class="heart">
+	      		<div class="d-flex flex-column">
+	      			<span *ngIf="article.total_votes != 1">This article has {{article.total_votes}} likes</span>
+	      			<span *ngIf="article.total_votes == 1">This article has 1 like</span>
+	      			<span>Like this article to give the author your support</span>
+	      		</div>
       		</div>
       		<div class="like-box" style="cursor:pointer" (click)="like()" *ngIf="didUserUpvote()">
 	      		<img src="assets/img/icons/Filled-Like.svg" class="heart">
