--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -7,11 +7,11 @@
           <div class="form-group">
             <div class="d-flex flex-row align-items-end">
               <div class="d-flex flex-column mr-4 align-items-center mr-3" style="width:47%">
-                <input type="file" name="file" id="file" class="inputfile" (change)="fileEvent($event)" />
+                <!-- <input type="file" name="file" id="file" class="inputfile" (change)="fileEvent($event)" />
                 <label for="file" style="cursor:pointer">
                   <img src="assets/img/Upload.png" class="upload-img">
                   <p class="mb-0"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Upload Profile Photo</p>
-                </label> 
+                </label>  -->
               </div>
 <!--               <div class="d-flex flex-column ml-2" style="width:45%">
                 <label for="firstname">Email Address (Username)</label>
