--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,4 @@
   </div> -->
   <div class="container-fluid" *ngIf="url.url != '/compose'"><router-outlet></router-outlet></div>
   <div *ngIf="url.url === '/compose'"><router-outlet></router-outlet></div>
-  <!-- <button type="button" class="btn btn-outline-warning" id="feedback">Submit Feedback</button> -->
+  <!-- <button type="button" class="btn feedback" id="feedback">Contact us!</button> -->
