--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -1,9 +1,10 @@
-<div class="card" *ngIf="(authService.userSignedIn$)">
+<div class="card" *ngIf="(authService.userSignedIn$)" style="border-bottom:0">
 <!--   <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top" routerLink="/profile/{{tokenService.currentUserData.id}}">
   <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2" routerLink="/profile/{{tokenService.currentUserData.id}}">
   <div class="card-header d-flex align-items-center py-2" routerLink="/profile/{{tokenService.currentUserData.id}}"> -->
   <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top">
-  <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2">
+  <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2" *ngIf="!authService.currentUser().image">
+  <img [src]="authService.currentUser().image" class="profile-avatar mr-2" *ngIf="authService.currentUser().image">
   <div class="card-header d-flex align-items-center py-2">
     <div class="d-flex flex-column" style="transform:translate(4.5em,0); cursor:pointer">
       <h4 class="profile-name my-0">{{authService.currentUser().first_name}} {{authService.currentUser().last_name}}</h4>
@@ -16,7 +17,7 @@
     <img src="assets/img/icons/Profile.svg" style="width:40%">
     <br>
     <span class="join-the-community">Join the Community</span><br>
-    <span class="signup-subheader">Learn about all Lazsoc has to offer</span>
+    <span class="signup-subheader">Get unlimited access to all Lazsoc has to offer</span>
     <br><br>
     <div class="signup-button mb-2" style="cursor:pointer">
       <span class="signup-btn-text" routerLink="/login">Sign up!</span>
