--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav">
+<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav" onunload="areYouSure();">
   <a class="navbar-brand" routerLink="/newsfeed">
     <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="105" class="ml-3" alt="">
   </a>
@@ -14,6 +14,9 @@
   </div>
 </nav>
 <nav class="gold-bar sticky-top"></nav>
+<div class="alert alert-danger" role="alert">
+  <strong>Warning:</strong> closing this tab will result in losing any unsaved work
+</div>
 <input type='file' name="file" id="file" class="inputfile" (change)="readUrl($event)">
 <div class="row justify-content-center">
   <div class="col-sm-11 col-md-11 col-lg-11 mt-4">
@@ -21,10 +24,12 @@
       <div class="card-block">
         <label for="file" class="cover-background" *ngIf="!hasCover" style="cursor:pointer">
           <img src="assets/img/UploadCover.png">
-          <span class="cover-text">Articles look better with cover photos</span>
+          <span class="cover-text">Articles look better with cover photos. <br> Images look best with height less than 500px.</span>
         </label>
         <div class="crop-container" *ngIf="hasCover">
+          <!-- <div class="delete-cover"><img src="assets/img/icons/Like.svg"></div> -->
           <img id="cover" src="" class="cover-img">
+          <button class="btn mt-3" style="background-color:#F2A900; color:white; cursor:pointer" (click)="removeCover()">Remove Cover</button>
         </div>
         <form>
           <div class="row justify-content-center">
@@ -33,8 +38,8 @@
                 <strong>Submission error:</strong> Article needs to have a title and a body
               </div>
               <input class="remove-glow" autofocus #titleValdation="ngModel" type="text" placeholder="Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="100">
-              <a href="https://goo.gl/f12uUj" target="_blank" class="mt-0"><small>Here is a great resource for stock images</small></a>
-              <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
+              <!-- <a href="https://goo.gl/f12uUj" target="_blank" class="mt-0"><small>Here is a great resource for stock images</small></a> -->
+              <div [froalaEditor]="froalaConfigs" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
             </div>
           </div>
           <br>
