--- a/src/app/hiring-container/hiring-container.component.html
+++ b/src/app/hiring-container/hiring-container.component.html
@@ -1,7 +1,11 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-sm-11 col-md-11 col-lg-11 mt-4 px-2">
-      <img class="mt-3" style="width:100%" src="assets/img/Laz-Hall.jpg">
+    	<div class="cover-container">
+    		    		<span class="open-positions">Open Positions</span>
+    		<span class="subtext">The fun outside the classroom</span>
+    		<img class="my-3" style="width:100%" src="assets/img/Laz-Hall.jpg">
+    	</div>
       <hiring-feed [clubID]="0"></hiring-feed>
     </div>
   </div>
