--- a/src/app/hiring/hiring.component.css
+++ b/src/app/hiring/hiring.component.css
@@ -22,3 +22,9 @@
     font-size:0.9em;
     color: rgba(0, 0, 0, .68);
 }
+.card {
+    border-radius: 0;
+}
+.card:hover {
+  background-color: #FAFAFA;
+}
