--- a/src/app/hiring/hiring.component.html
+++ b/src/app/hiring/hiring.component.html
@@ -1,5 +1,5 @@
 <div class="" *ngFor="let posting of jobPostings">
-  <div *ngIf="(clubID == 0 || clubID === posting.club_id)" class="card pointer py-0" (click)="onSelect(posting)">
+  <div *ngIf="(clubID == 0 || clubID === posting.club_id)" class="card py-0" style="cursor:pointer" (click)="onSelect(posting)">
     <div class="card-block">
       <div class="d-flex mb-2">
         <img src="assets/img/thumbnails/{{clubs[posting.club_id].app_logo}}" class="club-avatar mr-3" alt="">
@@ -7,9 +7,7 @@
           <h4 class="club-title mb-1">{{posting.title}}</h4>
           <h4 class="card-datetime">{{clubs[posting.club_id].name}}</h4>
         </div>
-      </div>
-      <div class="card-text mb-2">
-        Richard
+        <h4 class="card-datetime ml-auto" style="color:#83868A"><i>Expires {{posting.expiry_date | getShortDate}}</i></h4>
       </div>
     </div>
   </div>
