--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -5,11 +5,11 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav mr-4">
       <li class="nav-item mr-4">
-        <a class="nav-link" routerLink="/newsfeed" routerLinkActive="active">EVENTS</a>
+        <a class="nav-link" routerLink="/newsfeed" routerLinkActive="active">HOME</a>
       </li>
-      <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
+<!--       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
         <a class="nav-link" routerLink="/compose" target="_blank" routerLinkActive="active">COMPOSE</a>
-      </li>
+      </li> -->
 <!--       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
         <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
       </li> -->
@@ -31,16 +31,6 @@
       <li class="nav-item mr-4" *ngIf="!(authService.userSignedIn$)">
         <!-- <a class="nav-link" data-toggle="modal" data-target="#myModal">LOGIN</a> -->
         <a class="nav-link" routerLink="/login">LOGIN</a>
-      </li>
-      <li class="nav-item dropdown" *ngIf="(authService.userSignedIn$) && !isUpdate()">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor:pointer">
-          PROFILE
-        </a>
-        <div class="dropdown-menu profile-dropdown" aria-labelledby="navbarDropdownMenuLink" >
-          <!-- <a class="dropdown-item" routerLink="/profile/{{authService.currentUser().id}}">View Profile</a> -->
-          <a class="dropdown-item" routerLink="/update">Update Profile Info</a>
-          <a class="dropdown-item" style="cursor:pointer" (click)="signOut()">Sign Out</a>
-        </div>
       </li>
     </ul>
   </div>
