--- a/src/app/newsfeed-container/newsfeed-container.component.css
+++ b/src/app/newsfeed-container/newsfeed-container.component.css
@@ -11,6 +11,10 @@
   padding-left:15px;
 }
 
+.list-group {
+  border-top: 0 !important;
+}
+
 .card-header-text {
   font-family:Lato-Black;
   font-size:16px;
@@ -91,6 +95,12 @@
   top: 104px;
 }
 
+.sticky-signup {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 230px;
+}
+
 .filters-text {
 	/*height: 17px;
 	width: 44px;*/
@@ -146,4 +156,31 @@
   padding-left:9px;
   font-family:Lato-Semibold;
   color:black !important;
+}
+
+.sidebar-subtext {
+  font-size:12px;
+  font-color:grey;
+  margin:none;
+}
+
+.compose {
+  font-family: Lato-Regular;
+  border-radius: 2px;
+  width:100%;
+  text-align: center;
+  background-color:#F2A900;
+  color:white;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 470px;
+}
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color:inherit;
+  text-decoration: none;
 }
